[package]
name = "soren_copy_clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0"
base64 = "0.13.0"
base65536 = "1.0.1"
clipboard-cli = "*"
enigo = "*"
log = "0.4.17"
rand = "0.8.5"
reqwest = "*"
rsa = "0.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]} 
